Refactor programs